<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />
    <item
        android:id="@+id/menu_cart"
        android:icon="@drawable/cart"
        android:title="@string/cart" />

    <item
        android:id="@+id/menu_notifications"
        android:icon="@drawable/notification"
        android:title="@string/notifications"
        app:actionLayout="@layout/menu_counter_layout" />
    <group
        android:id="@+id/group3"
        android:checkableBehavior="none">

        <item
            android:id="@+id/menu_course"
            android:icon="@drawable/course"
            android:title="Courses" />

        <item
            android:id="@+id/menu_sell"
            android:icon="@drawable/sell"
            android:title="@string/sell_books" />

        <item
            android:id="@+id/menu_rent"
            android:icon="@drawable/rent"
            android:title="@string/rent_books" />

        <item
            android:id="@+id/menu_ebooks"
            android:icon="@drawable/ebooks"
            android:title="@string/e_books" />
        <item
            android:id="@+id/menu_donate"
            android:icon="@drawable/donate"
            android:title="@string/donate_books" />
        <item
            android:id="@+id/menu_request"
            android:icon="@drawable/request"
            android:title="@string/request_books" />
    </group>

    <group
        android:id="@+id/group1"
        android:checkableBehavior="none">

        <item
            android:id="@+id/menu_tracker"
            android:icon="@drawable/order"
            android:title="@string/your_orders" />
        <item
            android:id="@+id/menu_wallet_history"
            android:icon="@drawable/wallet"
            android:title="@string/wallet_history"
            app:actionLayout="@layout/menu_counter_layout" />
        <item
            android:id="@+id/menu_transaction_history"
            android:icon="@drawable/trans_history"
            android:title="@string/transaction_history"
            app:actionLayout="@layout/menu_counter_layout" />
    </group>

    <group
        android:id="@+id/group2"
        android:checkableBehavior="none">

        <item
            android:id="@+id/menu_change_pass"
            android:icon="@drawable/change_pass"
            android:title="@string/change_pass" />

        <item
            android:id="@+id/menu_manage_address"
            android:icon="@drawable/manage_address"
            android:title="@string/manage_addresses" />

        <item
            android:id="@+id/menu_refer"
            android:icon="@drawable/refer_earn"
            android:title="@string/refere" />
    </group>
<!--    <group-->
<!--        android:id="@+id/group4"-->
<!--        android:checkableBehavior="none">-->

<!--        <item-->
<!--            android:id="@+id/menu_giveaway"-->
<!--            android:icon="@drawable/giveaway"-->
<!--            android:title="@string/winrewards" />-->

<!--        <item-->
<!--            android:id="@+id/menu_moh"-->
<!--            android:icon="@drawable/moh"-->
<!--            android:title="@string/manofhonour" />-->

<!--        <item-->
<!--            android:id="@+id/menu_mon"-->
<!--            android:icon="@drawable/mon"-->
<!--            android:title="@string/manofnature" />-->

<!--    </group>-->

    <group
        android:id="@+id/group4"
        android:checkableBehavior="none">

        <item
            android:id="@+id/menu_offer"
            android:icon="@drawable/offer"
            android:title="Offer" />

        <item
            android:id="@+id/menu_internship"
            android:icon="@drawable/internship"
            android:title="Internship" />

    </group>




    <group
        android:id="@+id/group5"
        android:checkableBehavior="none">
        <item
            android:id="@+id/menu_contact"
            android:icon="@drawable/contact_us"
            android:title="@string/contact" />
        <item
            android:id="@+id/menu_faq"
            android:icon="@drawable/faq"
            android:title="@string/faq" />
        <item
            android:id="@+id/menu_about_us"
            android:icon="@drawable/about"
            android:title="@string/about" />
        <item
            android:id="@+id/menu_chat"
            android:icon="@drawable/chat"
            android:title="@string/live_chat" />


    </group>

    <group
        android:id="@+id/group6"
        android:checkableBehavior="none">

        <item
            android:id="@+id/menu_rate"
            android:icon="@drawable/rate_us"
            android:title="@string/rate" />

        <item
            android:id="@+id/menu_share"
            android:icon="@drawable/share"
            android:title="@string/sharapp" />

    </group>


    <group android:checkableBehavior="none">

        <item
            android:id="@+id/menu_terms"
            android:icon="@drawable/tc"
            android:title="@string/terms_conditions" />
        <item
            android:id="@+id/menu_privacy"
            android:icon="@drawable/privacyp"
            android:title="@string/privacy_policy" />

    </group>
    <item
        android:id="@+id/menu_logout"
        android:icon="@drawable/logout"
        android:title="@string/logout" />

</menu>