<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navMain"
        android:icon="@drawable/iconhome"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navCategory"
        android:icon="@drawable/iconcategory"
        android:title="@string/title_category" />
    <item
        android:id="@+id/navGames"
        android:icon="@drawable/icongame"
        android:title="@string/quizgames" />

    <item
        android:id="@+id/navWishList"
        android:icon="@drawable/iconwishlist"
        android:title="@string/title_fav" />

    <item
        android:id="@+id/navProfile"
        android:icon="@drawable/iconmenu"
        android:title="@string/title_menu" />




</menu>