<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_shop"
        android:icon="@drawable/shop"
        android:title="@string/title_shop" />

    <item
        android:id="@+id/navigation_category"
        android:icon="@drawable/category"
        android:title="@string/title_category" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/favourite"
        android:title="@string/title_fav" />

    <item
        android:id="@+id/navigation_track_order"
        android:icon="@drawable/order"
        android:title="@string/_title_order_track" />

</menu>