<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:shimmer="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:clickable="true"
    android:focusable="true"
    android:theme="@style/AppTheme">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:background="@drawable/bg_btn"
                    android:padding="@dimen/dimen_10dp">


                    <TextView
                        android:id="@+id/tvTitleBalance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="@dimen/dimen_5dp"
                        android:text="@string/your_balance"
                        android:textColor="@color/light_blue"
                        android:textSize="@dimen/_20ssp" />

                    <TextView
                        android:id="@+id/tvBalance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvTitleBalance"
                        android:layout_marginStart="@dimen/dimen_5dp"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_25ssp"
                        android:textStyle="bold" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tvBalance"
                        android:orientation="vertical">
                        <Button
                            android:id="@+id/btnRechargeWallet"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/dimen_5dp"
                            android:layout_marginTop="@dimen/dimen_10dp"
                            android:layout_marginBottom="@dimen/dimen_10dp"
                            android:layout_marginEnd="@dimen/dimen_5dp"
                            android:background="@drawable/card_shadow"
                            android:text="@string/recharge_your_wallet"
                            android:textAllCaps="false"
                            android:textColor="@color/colorPrimary"
                            android:textSize="@dimen/_12ssp"
                            android:textStyle="bold" />
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/default_bg">
                            <TextView
                                android:id="@+id/textknow"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentEnd="true"
                                android:layout_margin="@dimen/dimen_1dp"
                                android:textColor="@color/colorPrimary"
                                android:text="Know your Referral Code ?"/>
                            <EditText
                                android:id="@+id/referet"
                                android:layout_below="@+id/textknow"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/bg_border"
                                android:padding="@dimen/_10sdp"
                                android:layout_margin="@dimen/_10sdp"
                                android:hint="Enter Refer Code"/>
                            <Button
                                android:layout_width="wrap_content"
                                android:layout_height="@dimen/_30sdp"
                                android:background="@drawable/bg_btn"
                                android:text= "  GET DETAILS  "
                                android:id="@+id/getbtn"
                                android:layout_below="@+id/referet"
                                android:layout_centerHorizontal="true"
                                android:textColor="@color/white"/>
                            <LinearLayout
                                android:layout_margin="@dimen/_20sdp"
                                android:layout_below="@+id/getbtn"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">
                                <TextView
                                    android:id="@+id/nos"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:textColor="@color/colorPrimary"
                                    android:textStyle="bold"
                                    android:textSize="@dimen/_16sdp"/>
                                <TextView
                                    android:id="@+id/puramt"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:textColor="@color/colorPrimary"
                                    android:textStyle="bold"
                                    android:textSize="@dimen/_16sdp"/>
                            </LinearLayout>


                        </RelativeLayout>
                        <Button
                            android:id="@+id/btnSendWithdrawalRequest"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_5sdp"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:layout_marginEnd="@dimen/_5sdp"
                            android:background="@drawable/card_shadow"
                            android:text="@string/send_withdrawal_request"
                            android:textAllCaps="false"
                            android:textColor="@color/colorPrimary"
                            android:textSize="@dimen/_12ssp"
                            android:textStyle="bold" />

                    </LinearLayout>



                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone" />

                <com.facebook.shimmer.ShimmerFrameLayout
                    android:id="@+id/mShimmerViewContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:visibility="gone"
                    shimmer:shimmer_duration="1200">

                    <!-- Adding rows of placeholders -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <include layout="@layout/simmer_wallet" />

                        <include layout="@layout/simmer_wallet" />

                        <include layout="@layout/simmer_wallet" />

                        <include layout="@layout/simmer_wallet" />

                        <include layout="@layout/simmer_wallet" />

                        <include layout="@layout/simmer_wallet" />

                        <include layout="@layout/simmer_wallet" />

                    </LinearLayout>

                </com.facebook.shimmer.ShimmerFrameLayout>
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <RelativeLayout
        android:id="@+id/tvAlert"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone">

        <TextView
            android:id="@+id/tvAlertTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dimen_15dp"
            android:text="@string/no_transaction_history_found"
            android:textColor="@color/gray"
            android:textSize="@dimen/dimen_20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvAlertSubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvAlertTitle"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dimen_15dp"
            android:text="@string/you_have_not_any_transactional_history_yet"
            android:textColor="@color/gray"
            android:textSize="@dimen/dimen_15dp"
            android:textStyle="bold" />
    </RelativeLayout>

</RelativeLayout>